# otus_2

./: CMakeLists.txt  ippool.cpp  ippool.h  main.cpp  test_version_g.cpp
.github/workflows/: release.yml
